# rebar

./: .dockerignore  .gitignore  Cargo.toml  README.md
bench/: docker-compose.actix.yml  docker-compose.elixir.yml  docker-compose.go.yml  docker-compose.rebar.yml
bench/actix/: Dockerfile
bench/elixir/: Dockerfile
bench/elixir/compute/: mix.exs
bench/elixir/compute/lib/compute/: application.ex  router.ex
bench/elixir/gateway/: mix.exs
bench/elixir/gateway/lib/gateway/: application.ex  router.ex
bench/elixir/store/: mix.exs
bench/elixir/store/lib/store/: application.ex  key_agent.ex  router.ex
bench/go/: Dockerfile
bench/harness/: report.py  run.sh  scenarios.sh  wait-healthy.sh
bench/rebar/: Dockerfile
bench/rebar/compute/src/: main.rs
bench/rebar/store/src/: main.rs
bench/results/: post-optimisation-2-2026-03-08.txt  report.csv  report.md
bench/results/actix/: cross_node.json  latency.json  spawn_stress.json  throughput_c1.json  throughput_c10.json  throughput_c100.json  throughput_c1000.json  throughput_c50.json  throughput_c500.json
bench/results/baseline-2026-03-08/: analysis.md  criterion-output.txt
bench/results/elixir/: cross_node.json  latency.json  spawn_stress.json  throughput_c1.json  throughput_c10.json  throughput_c100.json  throughput_c1000.json  throughput_c50.json  throughput_c500.json
bench/results/go/: cross_node.json  latency.json  spawn_stress.json  throughput_c1.json  throughput_c10.json  throughput_c100.json  throughput_c1000.json  throughput_c50.json  throughput_c500.json
bench/results/post-optimisation-2026-03-08/: comparison.md  criterion-output.txt  supervisor-no-sleep.txt
bench/results/rebar/: cross_node.json  latency.json  spawn_stress.json  throughput_c1.json  throughput_c10.json  throughput_c100.json  throughput_c1000.json  throughput_c50.json  throughput_c500.json
bench/results/rebar-post/: cross_node.json  latency.json  spawn_stress.json  throughput_c1.json  throughput_c10.json  throughput_c100.json  throughput_c1000.json  throughput_c50.json  throughput_c500.json
bench/results/rebar-pre-optimisation/: latency.json  throughput_c100.json
clients/: README.md
clients/go/: README.md  go.mod
clients/go/rebar/: actor.go  errors.go  ffi.go  rebar_ffi.h  rebar_test.go  runtime.go  types.go
clients/python/rebar/: _ffi.py  errors.py  runtime.py
clients/typescript/: deno.json
clients/typescript/src/: actor.ts  errors.ts  ffi.ts  mod.ts  runtime.ts  types.ts
crates/rebar/: Cargo.toml
crates/rebar-cluster/: Cargo.toml
crates/rebar-cluster/src/: drain.rs  lib.rs  router.rs
crates/rebar-cluster/src/connection/: manager.rs
crates/rebar-cluster/src/protocol/: frame.rs
crates/rebar-cluster/src/registry/: orset.rs
crates/rebar-cluster/src/swim/: config.rs  detector.rs  gossip.rs  member.rs  mod.rs
crates/rebar-cluster/src/transport/: mod.rs  quic.rs  tcp.rs  traits.rs
crates/rebar-cluster/tests/: api_contract.rs  cluster_integration.rs
crates/rebar-core/: Cargo.toml
crates/rebar-core/benches/: message_passing.rs  process_lifecycle.rs  process_table.rs  supervisor.rs
crates/rebar-core/src/: bridge.rs  channel.rs  events.rs  executor.rs  gen_server.rs  io.rs  lib.rs  multi.rs  router.rs  runtime.rs  task.rs  testing.rs  time.rs  tls.rs
crates/rebar-core/src/gen_server/: engine.rs  mod.rs  types.rs
crates/rebar-core/src/process/: mailbox.rs  mod.rs  monitor.rs  table.rs  types.rs
crates/rebar-core/src/supervisor/: common.rs  dynamic.rs  engine.rs  mod.rs  spec.rs
crates/rebar-core/tests/: api_contract.rs  dynamic_supervisor_integration.rs  gen_server_integration.rs  integration.rs
crates/rebar-ffi/: Cargo.toml
crates/rebar-ffi/src/: lib.rs
crates/rebar-ffi/tests/: api_contract.rs
crates/rebar-watcher-tui/: Cargo.toml
crates/rebar-watcher-tui/src/: app.rs  input.rs  lib.rs
crates/rebar-watcher-tui/src/views/: events.rs  list.rs  mod.rs  tree.rs
crates/rebar-watcher-web/: Cargo.toml
crates/rebar-watcher-web/assets/: app.js  index.html  style.css
crates/rebar-watcher-web/src/: assets.rs  handlers.rs  lib.rs  server.rs  state.rs  ws.rs
crates/rebar/src/: lib.rs
docs/: architecture.md  benchmarks.md  extending.md  future.md  getting-started.md
docs/api/: client-go.md  rebar-cluster.md  rebar-core.md  rebar-ffi.md
docs/guides/: actors-go.md
docs/internals/: crdt-registry.md  distribution-layer.md  node-drain.md  quic-transport.md  supervisor-engine.md  swim-protocol.md  wire-protocol.md
docs/plans/: 2026-03-03-benchmark-design.md  2026-03-03-benchmark-implementation.md  2026-03-03-documentation-design.md  2026-03-03-rebar-design.md  2026-03-03-rebar-implementation.md  2026-03-03-roadmap-design.md  2026-03-04-barkeeper-design.md  2026-03-04-barkeeper-implementation.md  2026-03-04-client-libraries-implementation.md  2026-03-08-benchmarking-profiling-design.md  2026-03-08-fork-regression-tests-design.md  2026-03-08-genserver-dynamic-supervisor-implementation.md
lore/: 20260304-0045-tla-hardening.md  20260304-1200-go-client-race-fixes.md  20260304-1200-pr1-ffi-recv-harden.md  20260304-1300-pr3-hardening.md  20260304-1357-harden-pr5-serde.md  20260304-harden-phase2-graceful-shutdown.md  20260304-harden-phase3-supervisor-lifecycle.md  20260306-2200-rebar-monoio-rewrite.md  20260307-1400-panic-isolation.md
scripts/: flamegraph.sh
specs/tla/: .tlc_passed  MCRebarRegistry.tla  MCRebarSupervisor.cfg  MCRebarSupervisor.tla  MCRebarSwim.tla  RebarRegistry.cfg  RebarRegistry.tla  RebarSupervisor-OneForAll.cfg  RebarSupervisor-RestForOne.cfg  RebarSupervisor.cfg  RebarSupervisor.tla  RebarSwim.cfg  RebarSwim.tla  run_tlc.sh
