[workspace]
resolver = "2"
members = [
    "crates/rebar-core",
    "crates/rebar-cluster",
    "crates/rebar",
    "crates/rebar-ffi",
]
exclude = ["bench/rebar", "bench/actix"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/alexandernicholson/rebar"

[profile.bench]
debug = true

[profile.release]
debug = 1
