[package]
name = "rebar-cluster"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Distributed clustering, transport, and registry for the Rebar runtime"

[dependencies]
rebar-core = { path = "../rebar-core" }
rmpv = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
sha2 = "0.10"

[dev-dependencies]
rebar-core = { path = "../rebar-core", features = ["testing"] }
