[package]
name = "rebar-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core actor primitives and supervision for the Rebar runtime"

[dependencies]
compio-buf = "0.8"
compio-driver = "0.11"
turbine-core = { git = "https://github.com/johnnyshields/turbine.git", branch = "master" }
socket2 = { version = "0.5", features = ["all"] }
futures = "0.3"
local-sync = "0.1"
crossbeam-channel = "0.5"
libc = "0.2"
rmpv = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
