[package]
name = "rebar-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core actor primitives and supervision for the Rebar runtime"

[features]
default = []
tracing = ["dep:tracing"]
testing = []
tls = ["dep:compio-tls", "dep:rustls"]

[dependencies]
compio-buf = "0.8"
compio-driver = "0.11"
compio-io = "0.9"
compio-tls = { version = "0.9", features = ["rustls"], optional = true }
rustls = { version = "0.23", optional = true }
turbine-core = { git = "https://github.com/johnnyshields/turbine.git", branch = "master" }
socket2 = { version = "0.5", features = ["all"] }
futures = "0.3"
local-sync = "0.1"
libc = "0.2"
rmpv = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = { version = "0.1", optional = true }
async-trait = "0.1"
rustc-hash = "2"

[dev-dependencies]
tokio-test = "0.4"
rcgen = "0.13"
rustls = "0.23"
compio-tls = { version = "0.9", features = ["rustls"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "message_passing"
harness = false

[[bench]]
name = "process_lifecycle"
harness = false

[[bench]]
name = "supervisor"
harness = false

[[bench]]
name = "process_table"
harness = false
