[package]
name = "rebar-ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C-ABI FFI bindings for the Rebar actor runtime"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
rebar = { path = "../rebar" }
rebar-core = { path = "../rebar-core" }
rmpv = "1"
