[package]
name = "rebar-watcher-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI process and supervision tree monitor for Rebar"

[dependencies]
rebar-core = { path = "../rebar-core" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
