[package]
name = "rebar-watcher-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Web-based process and supervision tree monitor for Rebar"

[dependencies]
rebar-core = { path = "../rebar-core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
