[package]
name = "rebar"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A BEAM-inspired distributed actor runtime"

[dependencies]
rebar-core = { path = "../rebar-core" }
rebar-cluster = { path = "../rebar-cluster" }
monoio = { version = "0.2", features = ["sync", "utils"] }
local-sync = "0.1"
crossbeam-channel = "0.5"
rmpv = "1"

[dev-dependencies]
